[package]
name = "ledger-utility"
description = "An interface to allow easily interacting with ledgers via bluetooth and usb."
version = "0.3.0"
license = "Apache-2.0"
authors = ["Eric Woolsey <ewoolsey@ualberta.ca>"]
homepage = "https://github.com/ewoolsey/ledger-utility"
repository = "https://github.com/ewoolsey/ledger-utility"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "cosmos", "apdu", "bluetooth"]
edition = "2021"

[dependencies]
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }
ledger-bluetooth = "0.2.0"
ledger-transport-hid = "0.10.0"
ledger-transport = "0.10"
btleplug = "0.10"

[dev-dependencies]
serial_test = "0.7.0"
env_logger = "0.9"
tokio = { version = "1", features = ["macros"] }
